--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -20,6 +20,19 @@
         grid-template-columns: auto auto;
     margin: 10px;
   }
+  .appsview article {
+    height: 200px;
+  }
+  .appsview article a {
+    display: inline;
+    text-align: center;
+    margin: 5px;
+  }
+  .appsview article a:hover {
+    text-decoration: none;
+    background-color: #00000C;
+    color: white;
+  }
 }
 
 @media screen and (max-width: 1280px) {
@@ -31,11 +44,24 @@
         grid-template-columns: auto;
     margin: 10px;
   }
+  .appsview article {
+    height: 220px;
+  }
+  .appsview article a {
+    display: block;
+    text-align: center;
+    margin: 5px;
+  }
+  .appsview article a:hover {
+    text-decoration: none;
+    background-color: #00000C;
+    color: white;
+  }
 }
 
 .appsview article {
-  background-color: white;
-  height: 200px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#00000c60), color-stop(17%, white), color-stop(18%, white), to(white));
+  background: linear-gradient(180deg, #00000c60 0%, white 17%, white 18%, white 100%);
 }
 
 .appsview article h4 {
@@ -43,7 +69,7 @@
   padding: 5px;
   margin: 0;
   font-size: 1.5em;
-  background-color: #00000C;
+  background-color: #00000c60;
   border-bottom: #00000C 1px solid;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -62,9 +88,5 @@
   margin: 2px;
   text-decoration: none;
   border-radius: 10px;
-}
-
-.appsview article a:hover {
-  text-decoration: underline;
 }
 /*# sourceMappingURL=apps.css.map */
