--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -308,9 +308,69 @@ main {
             margin-right: 5px;
         }
     }
+    #coding ul li {
+        color: black;
+    }
 }
 
 // Les différentes compétences END
+// Les expériences professionelles
+.exp {
+    background-color: white;
+    article {
+        margin: 20px;
+        background-color: $C2;
+        display: block;
+        width: 500px;
+        border-radius: 20px;
+        h4 {
+            text-align: center;
+            background-color: $C3;
+            border-radius: 20px 20px 0 0;
+            padding: 5px 5px 0 0;
+            margin: 0;
+        }
+        div {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+    }
+    ul {
+        width: 250%;
+        background-color: rgba(0, 0, 0, 0.123);
+        list-style-type: " ";
+        list-style-type: none;
+        padding: 5px;
+        li {
+            i {
+                margin-right: 5px;
+            }
+        }
+    }
+    a {
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: space-between;
+        align-items: center;
+        img {
+            width: 75%;
+        }
+        color: yellow;
+        text-decoration: none;
+        text-align: center;
+        scale:1;
+        transition:all 0.2s;
+        &:hover {
+            color: $C3;
+            scale: 0.99;
+        }
+    }
+}
+
 // Les hobbies
 .hobbies {
     background-color: white;
