--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -142,6 +142,7 @@ main {
         border-radius: 18px;
         @media screen and (max-width: 1499px) {
             height: 250px;
+            font-size: 14px;
         }
         h4 {
             text-align: center;
@@ -318,22 +319,42 @@ main {
 .exp {
     background-color: white;
     article {
+        @media screen and (orientation: portrait) {
+            width: 90%;
+            margin: auto auto;
+        }
         margin: 20px;
         background-color: $C2;
         display: block;
         width: 500px;
         border-radius: 20px;
+        @media screen and (orientation: portrait) {
+            width: 95%;
+            div {
+                ul {
+                    width: 95%;
+                    padding: 0;
+                    margin: auto auto;
+                }
+            }
+        }
         h4 {
             text-align: center;
             background-color: $C3;
             border-radius: 20px 20px 0 0;
             padding: 5px 5px 0 0;
             margin: 0;
+            @media screen and (max-width: 525px) {
+                font-size: 3vw;
+            }
         }
         div {
             display: flex;
             justify-content: center;
             align-content: center;
+            @media screen and (max-width: 660px) {
+                flex-direction: column;
+            }
         }
     }
     ul {
