--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -1,65 +1,60 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 @media screen and (min-width: 1280px) {
   main {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 45% 45%;
-        grid-template-columns: 45% 45%;
+    grid-template-columns: 45% 45%;
     grid-gap: 10%;
   }
   main section {
-    background: #00000c;
+    background: rgb(0, 0, 12);
     border-radius: 95px 95px 0 0;
     border: solid rgba(0, 0, 12, 0.376) 10px;
   }
   main section h2 {
-    border-bottom: solid white 2px;
+    border-bottom: solid rgb(255, 255, 255) 2px;
     text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
   }
   main section div {
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 180px;
     overflow-wrap: break-word;
   }
   main section div button:hover a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
   }
   main section div span {
-    color: white;
+    color: rgb(255, 255, 255);
   }
 }
-
 @media screen and (max-width: 1280px) {
   main {
-    display: -ms-grid;
     display: grid;
     grid-gap: 1%;
   }
   main section {
-    background: #00000c;
+    background: rgb(0, 0, 12);
     border-radius: 100px 100px 0 0;
     border: solid rgba(0, 0, 12, 0.376) 15px;
   }
   main section h2 {
-    border-bottom: solid white 2px;
+    border-bottom: solid rgb(255, 255, 255) 2px;
     text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
+    font-family: "Oswald", sans-serif;
   }
   main section div {
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 180px;
     overflow-wrap: break-word;
   }
   main section div button:hover a {
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
   }
   main section div span {
-    color: white;
+    color: rgb(255, 255, 255);
   }
-}
-/*# sourceMappingURL=porte-folio.css.map */
+}/*# sourceMappingURL=porte-folio.css.map */
